manifests/services/matrix/00-server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: matrix-service
  namespace: matrix
  labels:
    environment: extern
    app: matrix
spec:
  selector:
    app: matrix
  type: ClusterIP
  ports:
    - targetPort: 8448
      port: 8448
      name: web-ui
